# rp2040_cdc_msc_template

./: .gitignore  CMakeLists.txt  README.md  pack_msc_files.py
src/: main.c
src/usb/: content.h  content.template  content_minimal.h  msc_disk.c  usb_descriptors.c  usb_service.c  usb_service.h
usb_files/: README.md
